Fix issues, add delete endpoint
